[tool.poetry]
name = "projectpulse"
version = "0.1.0"
description = ""
authors = ["Jay Soni <hi@jaysoni.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
jira = "^3.8.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
